# mcp_client_server_python

./: CURSOR_SETUP.md  PUSH_INSTRUCTIONS.md  README.md  cursor_mcp_config.json  cursor_simple_config.json
client/: client.py  env_config.txt  pyproject.toml  test_client.py
server/: DIFY_MCP_SETUP.md  dify_config_example.env  install.sh  pyproject.toml  requirements.txt  test_mcp_connection.py  weather.py
